# eco

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  collision.h  globals.h  main.cpp
blob/: blob.h  brain.h  graphics.h  logic.h
res/: names.txt
src/: collision.h  files.h  game_engine.h  global_dec.h  global_def.h  global_func.h  global_var.h  globals.cpp  globals.h  gui.h  main.cpp  mess.h  world.cpp  world.h  world_objects.h
src/blob/: blob.h  brain.h  common.h  graphics.h  logic.h  neural_net.h  smart_brain.h
